# customer-supporter

./: README.md  corporate_legal_fixed.py  docker-compose.yml  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/agent/: config.py  configuration.py  contract_review_workflow.py  corporate_legal_agent.py  employment_contract_review_workflow.py  finacial_data_query_workflow.py  financial_agent.py  financial_data_agent.py  generate_chart_workflow.py  generate_image.py  graph.py  hr_agent.py  hr_data_agent.py  interview_plan_generate_workflow.py  llm.py  meeting_summary_workflow.py  prompts.py  query_financial_data.py  receipt_regnoice.py  receipt_regnoice_workflow.py  recruitment_workflow.py  resume_workflow.py  state.py  test.ipynb  tools.py  utils.py  wenshu.py
static/: data.txt  text.md
